--- a/index.ipynb
+++ b/index.ipynb
@@ -54,9 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'title' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-fd9d7aa55aaa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hello\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'title' is not defined"
+     ]
+    }
+   ],
    "source": [
     "title(\"hello\")"
    ]
@@ -76,9 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO, IM UPPERCASED\n",
+      "hello, im lowercased\n",
+      "Hello, im capitalized\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"hello, im uppercased\".upper())\n",
     "print(\"HELLO, IM LOWERCASED\".lower())\n",
@@ -100,9 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6] [4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "list_append = [1,2,3,4]\n",
     "list_append.append(5)\n",
@@ -113,7 +145,7 @@
     "list_one = [1,2,3]\n",
     "list_two = [4,5,6]\n",
     "list_one.extend(list_two)\n",
-    "print(list_one)"
+    "print(list_one, list_two)"
    ]
   },
   {
@@ -128,9 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name-key', 'key2', 'num_keys'])\n",
+      "dict_values(['example-dict', 'value2', 3])\n"
+     ]
+    }
+   ],
    "source": [
     "dictionary = {'name-key': 'example-dict', 'key2': 'value2', 'num_keys': 3}\n",
     "print(dictionary.keys())\n",
@@ -146,11 +187,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__delitem__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setitem__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'clear',\n",
+       " 'copy',\n",
+       " 'fromkeys',\n",
+       " 'get',\n",
+       " 'items',\n",
+       " 'keys',\n",
+       " 'pop',\n",
+       " 'popitem',\n",
+       " 'setdefault',\n",
+       " 'update',\n",
+       " 'values']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dir(str)"
+    "dir(dict)"
    ]
   },
   {
@@ -171,20 +262,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'is', 'a', 'list'] {'this-is': 'a-dictionary'} this is a string and third argument\n"
+     ]
+    }
+   ],
    "source": [
-    "print([\"this\", \"is\", \"a\", \"list\"], {\"this-is\": 'a-dictionary'}, \"this is a string and third argument\")"
+    "print([\"this\", \"is\", \"a\", \"list\"], {\"this-is\": 'a-dictionary'}, \\\n",
+    "      \"this is a string and third argument\")"
    ]
   },
   {
@@ -196,18 +304,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type({})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(\"\")"
    ]
@@ -221,18 +351,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len({\"this-is\": 'a-dictionary', \"with-two\": \"key value pairs\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len([\"this\", \"is\", 1, \"list\", \"with\", 7, \"elements\"])"
    ]
@@ -246,9 +398,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71.5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum([10, 11, 13, 14, 9, 14.5])"
    ]
@@ -262,18 +425,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "min([\"this\", \"is\", \"a\", \"list\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.5"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "max([10, 11, 13, 14, 9, 14.5])"
    ]
@@ -342,9 +527,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. False\n",
+      "2. False\n",
+      "3. False\n",
+      "4. True\n",
+      "5. True\n",
+      "6. True\n",
+      "7. True\n"
+     ]
+    }
+   ],
    "source": [
     "print('1.', True != True) # False\n",
     "print('2.', False == True) # False\n",
@@ -366,9 +565,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. False\n",
+      "2. True\n",
+      "3. True\n",
+      "4. False\n",
+      "5. True\n",
+      "6. False\n",
+      "7. True\n",
+      "8. False\n",
+      "9. True\n"
+     ]
+    }
+   ],
    "source": [
     "print('1.', True > True) # False\n",
     "print('2.', True >= True) # True\n",
@@ -412,21 +627,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 0\n",
+      "2. False\n",
+      "3. 2\n",
+      "4. 3\n",
+      "5. 2\n",
+      "6. []\n",
+      "7. True\n",
+      "8. False\n",
+      "9. True\n",
+      "10. True\n",
+      "11. False\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"1.\", 2 and 0) #\n",
-    "print(\"2.\", False and 2) #\n",
-    "print(\"3.\", True and 2) #\n",
-    "print(\"4.\", 2 and 3) #\n",
-    "print(\"5.\", 2 or []) #\n",
-    "print(\"6.\", 0 or []) #\n",
-    "print(\"7.\", not False) #\n",
-    "print(\"8.\", not True) #\n",
-    "print(\"9.\", not []) #\n",
-    "print(\"10.\", not 0) #\n",
-    "print(\"11.\", not 100) #"
+    "print(\"1.\", 2 and 0) # 0\n",
+    "print(\"2.\", False and 2) # False\n",
+    "print(\"3.\", True and 2) # True\n",
+    "print(\"4.\", 2 and 3) # 3\n",
+    "print(\"5.\", 2 or []) # 2\n",
+    "print(\"6.\", 0 or []) # []\n",
+    "print(\"7.\", not False) # True\n",
+    "print(\"8.\", not True) # False\n",
+    "print(\"9.\", not []) # True\n",
+    "print(\"10.\", not 0) # True\n",
+    "print(\"11.\", not 100) # False"
    ]
   },
   {
@@ -449,24 +682,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. False\n",
+      "1A. True\n",
+      "2. False\n",
+      "3. True\n",
+      "4. False\n",
+      "4A. True\n",
+      "5. True\n",
+      "6. True\n",
+      "7. False\n",
+      "7A. True\n",
+      "8. True\n"
+     ]
+    }
+   ],
    "source": [
     "x = {'name': \"example\"}\n",
     "b = x\n",
     "c = {'name': \"example\"}\n",
-    "print(\"1.\", {} is {}) #\n",
-    "print(\"1A.\", {} == {}) #\n",
-    "print(\"2.\", [] is []) #\n",
-    "print(\"3.\", \"Hi\" is \"Hi\") #\n",
-    "print(\"4.\", [\"same\"] is [\"same\"]) #\n",
-    "print(\"4A.\", [\"same\"] == [\"same\"]) #\n",
-    "print(\"5.\", 9 is not 10) #\n",
-    "print(\"6.\", x is b) #\n",
-    "print(\"7.\", b is c) #\n",
-    "print(\"7A.\", b == c) #\n",
-    "print(\"8.\", x is not c) #"
+    "print(\"1.\", {} is {}) # False\n",
+    "print(\"1A.\", {} == {}) # True\n",
+    "print(\"2.\", [] is []) # False\n",
+    "print(\"3.\", \"Hi\" is \"Hi\") # True\n",
+    "print(\"4.\", [\"same\"] is [\"same\"]) # False\n",
+    "print(\"4A.\", [\"same\"] == [\"same\"]) # True\n",
+    "print(\"5.\", 9 is not 10) # True\n",
+    "print(\"6.\", x is b) # True\n",
+    "print(\"7.\", b is c) # False\n",
+    "print(\"7A.\", b == c) # True\n",
+    "print(\"8.\", x is not c) # True"
    ]
   },
   {
@@ -484,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -503,17 +754,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# let's say we are receiving two variables with different \n",
     "# values and we want to assign the higher value to a new variable\n",
     "x = 12\n",
     "y = 20\n",
     "new_variable = x if x > y else y\n",
-    "# here we are saying, take the value of x if it is greater than the value of y. else take the value of y\n",
-    "# since x > y evaluates to false, the ternary returns the value of the variable after the else statement or y\n",
+    "# here we are saying, take the value of x if it is greater than\\\n",
+    "# the value of y. else take the value of y\n",
+    "# since x > y evaluates to false, the ternary returns the value \\\n",
+    "# of the variable after the else statement or y\n",
     "print(new_variable)"
    ]
   },
@@ -544,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
